# MOPSI_TMP

./: PLNE  data3.txt  main.cpp  partition.cpp  partition.h  recherche.cpp  recherche.h
TMP_Recherche_Locale/: CMakeLists.txt  data1.txt  data2.txt  data3.txt  main.cpp  partition.cpp  partition.h  recherche.cpp  recherche.h
TMP_Recherche_Locale/TMP_Recherche_Locale/: recherche.cpp
